--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h1>The Course</h1>
             <div id="video-container">
                 <div id="play">Play</div>
-                <video autoplay loop muted src="Assets\Selfportrait _ Video Art.mp4"></video>
+                <video autoplay loop muted src="./Selfportrait _ Video Art.mp4"></video>
             </div>
         </div>
         <div id="page2">
